syntax = "proto3";

package api;

import "features.proto";

option go_package = "diagonal.works/diagonal/proto";

message FindFeatureByIDRequestProto {
    features.FeatureIDProto id = 1;
}

message FindFeatureByIDResponseProto {
    features.FeatureProto feature = 1;
}

service WorldService {
    rpc FindFeatureByID(FindFeatureByIDRequestProto) returns (FindFeatureByIDResponseProto);
}